# tg_bot_amocrm_notifier

./: .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  main.rs  worker.rs
src/model/: data.rs  deal.rs  mod.rs  sync.rs
